--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -10,6 +10,10 @@
     height: 7rem;
     background-color: #fff;
     border-bottom: var(--color-grey-light-1);
+    font-size: 1.4rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .content {
