--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,6 +1,6 @@
 .container {
     max-width: 120rem;
-    margin: 8rem auto;
+    margin: 5rem auto;
     background-color: var(--color-grey-light-2);
     box-shadow: var(--shadow-dark);
     min-height: 50rem;
@@ -9,7 +9,7 @@
 .header {
     height: 7rem;
     background-color: #fff;
-    border-bottom: var(--color-grey-light-1);
+    border-bottom: 1px solid var(--color-grey-light-1);
     font-size: 1.4rem;
     display: flex;
     justify-content: space-between;
