--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -296,8 +296,17 @@
     cursor: pointer;
     transition: all .2s;
 
+    & span {
+        margin-left: 3px;
+        transition: margin-left .2s;
+    }
+
     &:hover {
         color: var(--color-grey-dark-1);
+
+        & span {
+            margin-left: 8px;
+        }
     }
 
     &:focus {
@@ -402,5 +411,74 @@
         &:not(:last-child) {
             margin-right: -1.5rem;
         }
+    }
+}
+
+
+/////////////////////////////////////
+// REVIEW
+
+.review {
+
+    background-color: #fff;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    margin-bottom: 3.5rem;
+    position: relative;
+
+    &__text {
+        position: relative;
+        z-index: 10;
+    }
+
+    &__user {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 3rem 0;
+
+        &-box {
+            margin-right: auto;
+            margin-left: 1rem;
+        }
+
+        &-name {
+            font-size: 1.1rem;
+            weight: 600;
+            text-transform: uppercase;
+            margin-bottom: .4rem;
+        }
+
+        &-date {
+            font-size: 1rem;
+            color: var(--color-grey-dark-3);
+        }
+    }
+
+
+    &__photo {
+        height: 4.5rem;
+        width: 4.5rem;
+        border-radius: 50%;
+    }
+
+
+    &__rating {
+        font-size: 2.2rem;
+        color: var(--color-primary);
+        font-weight: 300;
+    }
+
+
+    &::before {
+        content: "\201C";
+        position: absolute;
+        top: -2.75rem;
+        left: -1rem;
+        line-height: 1;
+        font-size: 20rem;
+        color: var(--color-grey-light-2);
+        font-family: sans-serif;
+        z-index: 10;
     }
 }
