--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -17,6 +17,12 @@
     justify-content: center;
     align-items: center;
 
+    @media only screen and (max-width: $bp-smallest) {
+        order: 1;
+        flex: 0 0 100%;   
+        background-color: var(--color-grey-light-2);
+    }
+
     &__input {
         font-family: inherit;
         font-size:inherit;
@@ -132,11 +138,24 @@
     list-style: none;
     margin-top: 3.5rem;
 
+    @media only screen and (max-width: $bp-medium) {
+        display: flex;
+        margin:0;        
+    }
+
     &__item {
         position: relative;
 
+        @media only screen and (max-width: $bp-medium) {
+            flex: 1;
+        }
+
         &:not(:last-child) {
             margin-bottom: .5rem;
+
+            @media only screen and (max-width: $bp-medium) {            
+                margin:0;        
+            }
         }
 
         &::before {
@@ -178,6 +197,16 @@
         align-items: center;
         position: relative;
         z-index: 10;
+
+        @media only screen and (max-width: $bp-medium) {
+            justify-content: center;
+            padding: 2rem;            
+        }
+        
+        @media only screen and (max-width: $bp-small) {
+            flex-direction: column;
+            padding: 1.5rem .5rem;
+        }
     }
 
     &__list {
@@ -189,6 +218,14 @@
         height: 1.75rem;
         margin-right: 2rem;
         fill: currentColor;
+
+        @media only screen and (max-width: $bp-small) {
+            margin-right: 0;
+            margin-bottom: 7px;
+            width: 1.5rem;
+            height: 1.5rem;
+
+        }
     }
 }
 
@@ -200,7 +237,11 @@
     font-size: 1.2rem;
     text-align: center;
     padding: 2.5rem;
-    color: var(--color-grey-light-4)
+    color: var(--color-grey-light-4);
+
+    @media only screen and (max-width: $bp-medium) {        
+        display: none
+    }
 }
 
 
@@ -233,6 +274,11 @@
         text-transform: uppercase;
         letter-spacing: 1px;
         padding: 1.5rem 3rem;
+
+        @media only screen and (max-width: $bp-small) {
+            font-size: 1.8rem;
+            padding: 1.25rem 2rem;
+        }
     }
 
     &__stars {
@@ -268,15 +314,27 @@
         align-items: center;
         flex-direction: column;
 
+        @media only screen and (max-width: $bp-small) {
+            padding: 0 1.5rem;
+        }
+
         &--count {
             font-size: .8rem;
             text-transform: uppercase;
+
+            @media only screen and (max-width: $bp-small) {
+                font-size: .5rem;
+            }
         }
 
         &--average {
             font-size: 2.25rem;
             font-weight: 300; 
             margin-bottom: -3px;          
+
+            @media only screen and (max-width: $bp-small) {
+                font-size: 1.8rem;
+            }
         }
     }
 
@@ -398,7 +456,7 @@
     }
 
     &__friends {
-
+        display: flex;
     }
 
     &__photo {
@@ -409,7 +467,7 @@
         border: 3px solid #fff;
 
         &:not(:last-child) {
-            margin-right: -1.5rem;
+            margin-right: -3rem;
         }
     }
 }
@@ -425,6 +483,11 @@
     padding: 3rem;
     margin-bottom: 3.5rem;
     position: relative;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2rem;
+        margin-bottom: 3rem;
+    }
 
     &__text {
         position: relative;
@@ -490,6 +553,10 @@
 .cta {
     padding: 3.5rem;
     text-align: center;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2.5rem;
+    }
 
     &__book-now {
         font-size: 2rem;
