--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -426,17 +426,21 @@
         width: 1rem;
         margin-right: 7px;
 
-        //modern browsers masks
-        background-color: var(--color-primary);
-        -webkit-mask-image: url('../img/chevron-thin-right.svg');
-        -webkit-mask-size: cover;
-        mask-image: url('../img/chevron-thin-right.svg');
-        mask-size: cover;
-
-
         // older browser 
-        // background-image: url('../img/chevron-thin-right.svg');
-        // background-size: cover;
+        background-image: url('../img/chevron-thin-right.svg');
+        background-size: cover;
+
+        //modern browsers masks
+        @supports(-webkit-mask-image: url()) or (-webkit-mask-image: url()) {
+            background-color: var(--color-primary);
+            -webkit-mask-image: url('../img/chevron-thin-right.svg');
+            -webkit-mask-size: cover;
+            mask-image: url('../img/chevron-thin-right.svg');
+            mask-size: cover;
+            background-image: none;
+        }
+        
+        
     }
 }
 
